<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/signUpTextView"
            style="@style/TitleTextAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_in_app" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/surnameInputLayout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_surname"
            android:inputType="textPersonName"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/ErrorText"
            app:helperText="@string/necessary"
            app:helperTextTextAppearance="@style/ErrorText"
            app:hintTextAppearance="@style/HintInInputTextLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/surnameEditText"
                style="@style/TextInputEditText"
                android:inputType="textCapSentences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputLayoutStyle"
            android:hint="@string/enter_name"
            android:inputType="textPersonName"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/ErrorText"
            app:helperText="@string/necessary"
            app:helperTextTextAppearance="@style/ErrorText"
            app:hintTextAppearance="@style/HintInInputTextLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameEditText"
                style="@style/TextInputEditText"
                android:inputType="textCapSentences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/patronymicInputLayout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_patronymic"
            android:inputType="textPersonName"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/ErrorText"
            app:hintTextAppearance="@style/HintInInputTextLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/patronymicEditText"
                style="@style/TextInputEditText"
                android:inputType="textCapSentences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

<!--        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/postInputLayout"
            style="@style/TextInputLayoutStyle"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_post"
            android:inputType="textPersonName"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/ErrorText"
            app:helperText="@string/necessary"
            app:helperTextTextAppearance="@style/ErrorText"
            app:hintTextAppearance="@style/HintInInputTextLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/postEditText"
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneInputLayout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_phone"
            android:inputType="phone"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/ErrorText"
            app:helperText="@string/necessary"
            app:helperTextTextAppearance="@style/ErrorText"
            app:hintTextAppearance="@style/HintInInputTextLayout"
            app:prefixTextAppearance="@style/PrefixTextInInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLength="18"
                android:letterSpacing="0.04"
                android:textAppearance="@style/PrefixTextInInputLayout" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/selectObject"
            android:layout_height="70dp"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:text="Выбрать объект"
            android:textSize="20sp"
            app:cornerRadius="10dp"
            android:textColor="@color/black"
            android:backgroundTint="@color/light_grey" />

        <TextView
            android:id="@+id/objectIdErrorTextView"
            style="@style/TitleTextAppearance"
            android:gravity="start"
            android:textColor="@color/red"
            android:layout_marginStart="16dp"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Вы не выбрали объект!"
            android:visibility="gone"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUpButton"
            android:layout_height="70dp"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/send_to_sign_up"
            android:textSize="20sp"
            app:cornerRadius="10dp"/>

    </LinearLayout>

</ScrollView>